cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(hello VERSION 1.0)
file(GLOB_RECURSE THREAD_FILES source/*.cc)
set(SRC_FILES ${THREAD_FILES})
add_executable(main ${SRC_FILES} main.cc)
target_include_directories(main PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
